Add possibility to run bash scripts with parameters